--- a/docs/src/content/docs/reference/lake-formation-tbac-recommended-strategy.mdx
+++ b/docs/src/content/docs/reference/lake-formation-tbac-recommended-strategy.mdx
@@ -114,44 +114,47 @@ this inherently grants access to all child resources (like a table) that share t
 
 ## Tag Strategy
 
-There is no one-size-fits-all solution; the most effective strategy is the one that aligns best with an
-organization's structure. The recommended strategies is a modified version of the
+There is no one-size-fits-all solution, the most effective strategy is the one that aligns best with an organization's
+structure. The recommended strategies are a modified version of the
 [AWS Recommended Common LF-Tag Ontologies](https://aws.github.io/aws-lakeformation-best-practices/lf-tags/common-ontologies/).
 
-We suggest one of two strategies, pick the one that best fits your organization's structure:
-- **Product based tagging**: Tag resources based on the product/project they belong to and then create fine-grained permission
-grants per principal/team. **This is the recommended strategy when you have many products and many teams**. It scales with
-both products and team size, but requires more effort in creating permission grants.
+We suggest two strategies, pick the one that best fits your organization's structure:
 
-- **Team based tagging**: Tag resources based on the team that needs access to them assuming the same team tag will have
-the same permission level to all resources that it has access to. **This is the recommended strategy due to its simplicity
-when you have many products and only ever a few teams.** It scales with the number of products but not the number of teams,
-as there is a 50 tag limit on resources.
+- **Product-based tagging**: Tag resources based on the product/project they belong to and then create fine-grained
+permission grants per principal/team. **Recommended for scenarios with many products and many teams**. This approach scales
+with both products and team size but requires more effort in creating permission grants.
 
-Let's consider a scenario where we have the following teams:
-- `Admin` has role `RoleAdmin`
-- `DataEngineering` has role `RoleDataEngineering`
-- `DataScience` has role `RoleDataScience`
+- **Team-based tagging**: Tag resources based on the team that needs access, assuming that it is acceptable that the same team tag will have
+the same permission level to all resources they have access to. **Recommended for simplicity when you have many products but only a few
+teams and can accept certain limitations.** This approach scales with the number of products but not the number of teams, due to the 50-tag limit on
+resources.
 
-We have the following Products and their Databases:
+Let's consider a scenario with the following teams and roles:
+- `Admin` has the role `RoleAdmin`
+- `DataEngineering` has the role `RoleDataEngineering`
+- `DataScience` has the role `RoleDataScience`
+
+We have the following products and their respective databases:
 - `ProductA`: `Database1`, `Database2`
 - `ProductB`: `Database3`
 
-### Product based tagging
+### Product-based tagging
 
-This strategy works by tagging resources based on the product they belong to and then creating fined grained permission
-grants per principal/team.
+This strategy involves tagging resources based on the product they belong to, followed by creating fine-grained
+permission grants per team.
 
+#### Suggested Tags
 We suggest to start with a basic tagging strategy and limiting the number of tags:
-- `product:<product_name> = true`: Apply this tag to resources that belong to a specific product.
-- `sensitive = [true, false]`: For resources containing sensitive data, such as Personally Identifiable
-Information (PII).
+- `product:<product_name> = true`: Tag resources belonging to a specific product.
+- `sensitive = [true, false]`: Tag resources containing sensitive data (e.g., PII).
 
+#### Resource Tagging
 Start by tagging your resources, let's only apply them to Databases to keep things simple. Apply the following tags:
-- `Database1` with tags (`sensitive=false`, `product:productA=true`)
-- `Database2` with tags (`sensitive=true`,  `product:productA=true`)
-- `Database3` with tags (`sensitive=false`, `product:productB=true`)
+- `Database1`: `sensitive=false`, `product:productA=true`
+- `Database2`: `sensitive=true`, `product:productA=true`
+- `Database3`: `sensitive=false`, `product:productB=true`
 
+#### Permissions
 Admins need full access to all Databases, we don't have to specify the `senstive` tag as the value is irrelevant.
 ```sql
 GRANT FULL ACCESS ON TAGS product:productA=true TO RoleAdmin
@@ -159,7 +162,7 @@ GRANT FULL ACCESS ON TAGS product:productB=true TO RoleAdmin
 ```
 
 The following grants will allow the `DataEngineering` team full access to all Databases of all products that are not
-sensitive. So they can only access `Database1` and `Database3`.
+sensitive. They will only be able to access `Database1` and `Database3`.
 ```sql
 GRANT FULL ACCESS ON TAGS product:productA=true AND sensitive=false TO RoleDataEngineering
 GRANT FULL ACCESS ON TAGS product:productB=true AND sensitive=false TO RoleDataEngineering
@@ -172,19 +175,29 @@ GRANT READ ACCESS ON TAGS product:productB=true AND sensitive=true TO RoleDataSc
 
 #### Pros and Cons
 
-This model works well when you have **a few products/databases** that need to be shared with teams. You simply add the product
-tag once to the resource but then have to apply permission grants to each team that needs access to that product.
-**You do not to apply more tags to resources, but crate more access grants instead.**
+This approach is effective when there are only a few products or databases that need to be shared across multiple teams.
+In this model, you assign a product tag to each resource once and then configure permission grants for every team that
+requires access to the product.
 
-For example, let's consider you have 100 products/databases and 5 teams. We now have to add the SalesTeam to have access to 50
-of these products. This involves creating the following grants:
+**Advantages**:
+- You do not need to add additional tags to resources.
+- Permission grants can be tailored to each team's requirements.
+
+**Disadvantages**:
+- Creating permission grants for every team and product can become time-consuming and complex as the number of teams
+and products increases.
+
+**Example Scenario**:
+
+Assume you have 100 products or databases and 5 teams. If the SalesTeam requires access to 50 of these products, the
+following grants would need to be created:
 ```sql
 GRANT READ ONLY ACCESS ON TAGS product:productA=true AND sensitive=false TO RoleSales
 GRANT READ ONLY ACCESS ON TAGS product:productB=true AND sensitive=false TO RoleSales
 ... repeat for remaining 48 products
 ```
 
-If we have to add a new product then we also have to give each team that needs access to that product access.
+If a new product is introduced, you must also grant permissions to each relevant team. For example:
 ```sql
 GRANT FULL ACCESS ON TAGS product:productNEW=true AND sensitive=false TO RoleDataEngineering
 GRANT READONLY ACCESS ON TAGS product:productNEW=true AND sensitive=false TO RoleDataScience
@@ -193,27 +206,31 @@ GRANT READONLY ACCESS ON TAGS product:productNEW=true AND sensitive=false TO Rol
 
 ### Team based tagging
 
-This strategy works by tagging resources based on the team that needs access to them but the same team tag will have
-the same permission level to all resources that it has access to.
+This strategy involves tagging resources based on the team that requires access. However, it is important to note that
+all resources associated with the same team tag will share the same permission level.
 
+#### Suggested Tags
 We suggest to start with a basic tagging strategy and limiting the number of tags:
-- `team:<team_name> = true`: Apply this tag to resources belonging to a specific team.
-- `sensitive = [true, false]`: For resources containing sensitive data, such as Personally Identifiable
+Here are the basic tags:
+- `team:<team_name> = true`: Assigned to resources that a specific team should access.
+- `sensitive = [true, false]`: Indicates whether a resource contains sensitive data, such as Personally Identifiable
 Information (PII).
 
+#### Resource Tagging
 Start by tagging your resources, let's only apply them to Databases to keep things simple. Apply the following tags,
-let's assume that we always have the `team:Admin=true` tag on all resources as they must always have access to all
+assuming that we always have the `team:Admin=true` tag on all resources, as they must always have access to all
 resources:
 - `Database1` with tags (`sensitive=false`, `team:Admin=true`)
 - `Database2` with tags (`sensitive=true`,  `team:Admin=true`)
 - `Database3` with tags (`sensitive=false`, `team:Admin=true`)
 
+#### Permissions
 Since Admins need full access to all Databases, we don't have to specify the `senstive` tag as the value is irrelevant.
 ```sql
 GRANT FULL ACCESS ON TAGS team:Admin=true TO RoleAdmin
 ```
 
-For the `DataEngineering` team to have full access to all Databases that are not sensitive, we need ot specify their
+For the `DataEngineering` team to have full access to all Databases that are not sensitive, we need to specify their
 grants as:
 ```sql
 GRANT FULL ACCESS ON TAGS team:DataEngineering=true AND sensitive=false TO RoleDataEngineering
@@ -222,7 +239,6 @@ But now we have to add tags to our resources, our Databases now look like:
 - `Database1` with tags (`sensitive=false`, `team:Admin=true`, `team:DataEngineering=true`)
 - `Database2` with tags (`sensitive=true`,  `team:Admin=true`, `team:DataEngineering=true`)
 - `Database3` with tags (`sensitive=false`, `team:Admin=true`, `team:DataEngineering=true`)
-
 
 The `DataScience` team requires read only access to Database3.
 ```sql
@@ -236,51 +252,34 @@ But again, we have to add tags to our resources, our Databases now look like:
 #### Pros and Cons
 
 :::caution
-This strategy is not scalable if you have many teams. There is a 50 tag limit on resources, meaning you will never
-be able to go beyond 50 teams. Keep in mind that might have other tags as well, such as `sensitive` and they all
-count towards the 50 tag limit.
+This strategy has scalability limitations. AWS enforces a 50-tag limit per resource, which means you cannot exceed 50
+teams. Additionally, other tags such as `sensitive` count toward this limit, reducing the number of team tags you can use.
 :::
 
-This model works well when you have **many products/databases** that need to be shared with **a few teams** and
-can accept that a team will have the same permissions across all resources that it's tag has access to. You simply create the permission grant
-once for the team's tag and then apply the team's tag to all resources that the team needs access to.
-**You do not to create more permission grants, but need to tag resources instead.**
+This approach is effective when you need to share **many products or databases** with **a small number of teams** and
+can accommodate the restriction that all resources with the same team tag share identical permissions. You define the
+permission grant once for the team's tag and apply it to all resources requiring access.
 
-For example, let's consider you have 100 products/databases and 5 teams. We now have to add the SalesTeam to have
-access to 50 of these products. This involves adding the sales team tag to each of the databases:
+**Advantages**:
+- Reduces the need for multiple permission grants.
+- Straightforward to manage with a limited number of teams.
+
+**Disadvantages**:
+- Requires tagging resources for each team, which can become cumbersome.
+- Teams with the same tag will have identical permissions for all tagged resources.
+- Limited scalability due to the 50-tag resource limit.
+
+**Example Scenario**:
+
+Consider a situation with 100 products or databases and 5 teams. If the `SalesTeam` requires access to 50 of these
+products, you would need to update the tags on each database:
 - `Database1` with tags (`sensitive=false`, `team:Admin=true`, `team:DataEngineering=true`, `team:Sales=true`)
 - `Database2` with tags (`sensitive=true`,  `team:Admin=true`, `team:DataEngineering=true`, `team:Sales=true`)
 - `Database3` with tags (`sensitive=false`, `team:Admin=true`, `team:DataEngineering=true`, `team:DataScience=true`, `team:Sales=true`)
 - ... repeat for remaining 47 products/databases
 
-If we have to add a new product/database then we also have to add a tag for each team that needs access.
+When introducing a new product or database, you must also update its tags for each relevant team:
 - `DatabaseNEW` with tags (`sensitive=false`, `team:Admin=true`, `team:DataEngineering=true`, `team:Sales=true`)
-
-## Roles and Grants
-
-We recommend defining roles in a structure similar to the one below:
-
-- `AdminTeamRole`: For users with executive or administrative responsibilities.
-- `<team_name>TeamRole`: For users belonging to specific teams, e.g., `SalesTeamRole`.
-
-The following grants can serve as defaults or a baseline, which can be expanded upon as more specific
-needs arise.
-
-- Admins have access to every resource:
-  ```sql
-  GRANT READ ACCESS ON TAGS team:Admins=true
-  ```
-
-- Everyone has access to resources tagged as sharable.
-  ```sql
-  GRANT READ ACCESS ON TAGS sharable=true
-  ```
-
-- Teams have access to resources tagged with their team's name, but only those not flagged as sensitive. They are the
-  only ones that have write access to their resources.
-  ```sql
-  GRANT FULL ACCESS ON TAGS team:<team_name>=true AND sensitive=false
-  ```
 
 ## Other Sources
 - https://aws.github.io/aws-lakeformation-best-practices/
