vpcs and network addresses

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -150,7 +150,7 @@ development account.
     config = DataLandingZoneProps(
       local_profile="YourAwsProfile",
       regions={
-          "global": Region.CHOOSE_A_GLOBAL_REGION,
+          "global_": Region.CHOOSE_A_GLOBAL_REGION,
           "regional": [Region.CHOOSE_ONE_OR_MORE_ADDITIONAL_REGIONS],
       },
       mandatory_tags={
