--- a/docs/src/content/docs/components/networking/vpcs.mdx
+++ b/docs/src/content/docs/components/networking/vpcs.mdx
@@ -4,27 +4,27 @@ description: VPCs
 ---
 import DualCode from '../../../../components/DualCode.astro';
 
-The Data Landing Zone supports creating Virtual Private Clouds (VPCs) per account in multiple regions. Overlapping CIDRs
-are not allowed between VPCs in the same account or across accounts.
+The Data Landing Zone provides support for creating Virtual Private Clouds (VPCs) in multiple regions and accounts. It
+enforces non-overlapping CIDR ranges across VPCs within the same account and across accounts.
 
 :::note
-Be sure to disable creating the default VPC when creating accounts with Control Tower as mentioned in the
-[SOP - Add Account](/components/account-management/sop-add-account). All VPC are defined in code by the DLZ.
+Ensure that default VPC creation is disabled when setting up accounts with Control Tower, as outlined in the
+[SOP - Add Account](/components/account-management/sop-add-account). All VPCs are defined programmatically by the DLZ.
 :::
 
-The DLZ allows fine-grained control of VPCs, subnets, and route tables. Below is an example of defining a VPC
-using the `Defaults.vpcClassB3Private3Public(0, Region.EU_WEST_1)` function and defining the same configuration
-manually.
+The DLZ enables precise control over VPCs, subnets, and route tables. Each VPC, route table, and subnet is named to
+facilitate addressing using a
+[Network Address](/reference/network-address). For example, this allows you to target a specific subnet for deploying a
+resource.
 
-Each VPC, route table and subnet has a name so that they can be addressed using a [Network Address](/reference/network-address).
-This allows us to for example, target a specific subnet to deploy a resource.
+The example below defines two VPCs:
+- A VPC created using the default function in the `eu-west-1` region with a CIDR block of `10.0.0.0/16`.
+- A manually configured VPC in the `us-east-1` region with a CIDR block of `10.1.0.0/16`.
 
-Below is an example of defining:
-- Two VPCs:
-  - Using the default function in the `eu-west-1` region with CIDR `10.0.0.0/16`.
-  - Manually in the `us-east-1` region with CIDR `10.1.0.0/16`.
-- Each VPC has a `private` and `public` route table with three subnets each, taking a `/19` CIDR allowing 18k hosts each.
-- Each VPC leaves space at the end for additional subnets, in this case two `/19` subnets are left.
+Both VPCs include:
+- A `private` route table and a `public` route table, each containing three subnets with `/19` CIDRs that allow for
+approximately 8k hosts per subnet.
+- Reserved space for additional subnets, leaving two `/19` subnets available at the end of each VPC's CIDR range.
 
 <DualCode>
   <Fragment slot="ts">
