--- a/docs/src/content/docs/reference/network-address.mdx
+++ b/docs/src/content/docs/reference/network-address.mdx
@@ -4,16 +4,17 @@ description: Network Address
 ---
 import DualCode from "../../../components/DualCode.astro";
 
-A Network Address is a unique identifier for a network resource, such as a VPC, subnet, or route table. These addresses
-work across accounts and regions, allowing for easy selection and addressing of network resources. A Network Address
-is used when defining VPC bound resources in the DLZ, like NATs, Bastion Hosts, VPC Peering etc.
+A Network Address uniquely identifies a network resource, such as a VPC, subnet, or route table. These addresses can
+be used across accounts and regions, enabling seamless selection and referencing of network resources. They are
+commonly used when defining VPC-bound resources in the DLZ, like NATs, Bastion Hosts, VPC Peering, etc.
 
-Network Addresses are weekly typed strings that has the following schema:
+Network Addresses are weakly typed strings that follow the schema below:
 ```
 <account-name>.<region>.<vpc-name>.<route-table-name>.<subnet-name>
 ```
 
-Examples of specifying a Network Addresses:
+### Examples of Network Address Usage
+
 <DualCode>
   <Fragment slot="ts">
     ```ts
@@ -34,18 +35,18 @@ Examples of specifying a Network Addresses:
 </DualCode>
 
 
-This schema allows us to select various network entities, where a network entity is defined as one or more an accounts,
-vpcs, regions, subnets or subnets. This enables selections like:
+This schema allows you to select various network entities. A network entity is defined as one or more accounts, VPCs,
+regions, or subnets. Below are examples of possible selections:
 
-- `development.us-east-1.default.private.private-1`: Selects a specific private subnet in the default VPC in the
+- `development.us-east-1.default.private.private-1`: Selects a specific private subnet in the default VPC within the
 development account in the us-east-1 region.
-- `development.us-east-1.default.private`: Select all the private subnets in the default VPC in the development
+- `development.us-east-1.default.private`: Selects all private subnets in the default VPC within the development
 account in the us-east-1 region.
-- `development.us-east-1.default`: Select all the route tables and all their respective subnets in the default
-VPC in the development account in the us-east-1 region.
-- `development.us-east-1`: Select all the VPCs and their respective route tables and subnets in the development
-account in the us-east-1 region.
-- `development`: Select all the VPCs, route tables and subnets in the development account in all the regions.
+- `development.us-east-1.default`: Selects all route tables and their associated subnets in the default VPC within the
+development account in the us-east-1 region.
+- `development.us-east-1`: Selects all VPCs, along with their route tables and subnets, within the development account
+in the us-east-1 region.
+- `development`: Selects all VPCs, route tables, and subnets across all regions within the development account.
 
 
 ## API References
