--- a/docs/src/content/docs/components/networking/nats.mdx
+++ b/docs/src/content/docs/components/networking/nats.mdx
@@ -4,23 +4,25 @@ description: NATs
 ---
 import DualCode from '../../../../components/DualCode.astro';
 
-The Data Landing Zone provides support for creating Gateway and Instance Network Address Translators (NATs) within
-a VPC. To create a NAT, specify:
-- `location`: A **Subnet** [Network Address](/reference/network-address) to define where it will be deployed.
-- `allowAccessFrom`: A **Route Table** [Network Address](/reference/network-address) to define what should route default traffic through it.
-- `type`: The type of NAT (Gateway or Instance) and any additional properties required for the NAT type. For example,
-  `instanceType` for NAT Instances.
+The Data Landing Zone offers support for creating Gateway and Instance Network Address Translators (NATs) within
+a VPC. To create a NAT, specify the following parameters:
 
-The example below configures two NATs:
-- One account called `development` with two VPCs, one in the `eu-west-1` region and the other in the `us-east-1` region.
-- One NAT **Gateway** in the development account `eu-west-1` region VPC, public subnet that routes all outbound private
-  subnet traffic through it.
-- One NAT **Instance** in the development account `us-east-1` region VPC, public subnet that routes all outbound private
+- `location`: The **Subnet** [Network Address](/reference/network-address) that defines where the NAT will be deployed.
+- `allowAccessFrom`: The **Route Table** [Network Address](/reference/network-address) specifies what should route
+traffic through the NAT.
+- `type`: The type of NAT (Gateway or Instance), including any additional properties needed for the selected NAT type.
+For example, the `instanceType` for NAT instances.
+
+The following example configures:
+- One account named `development` with two VPCs: one in the `eu-west-1` region and the other in the `us-east-1` region.
+- One NAT **Gateway** in the `eu-west-1` region public subnet of the development account, routing all outbound private
+subnet traffic through it.
+- One NAT **Instance** in the `us-east-1` region public subnet of the development account, routing all outbound private
 subnet traffic through it.
 
-:::Note
-The `allowAccessFrom` Network Address must be in the same VPC (this restriction will be dropped when Transit Gateway
-support is added).
+:::note
+The `allowAccessFrom` Network Address must be within the same VPC. This restriction will be lifted once Transit Gateway
+support is added.
 :::
 
 <DualCode>
@@ -147,22 +149,20 @@ support is added).
   </Fragment>
 </DualCode>
 
-Each NAT configuration will define the following:
+Each NAT configuration includes the following:
 - A single Internet Gateway
-- A NAT Gateway/Instance
+- A NAT Gateway or Instance
 - Routes in the route table of the NATs pointing all outbound traffic (`0.0.0.0/0`) to the Internet Gateway
-- Routes in the route table of all the `from` addresses, pointing all outbound traffic (`0.0.0.0/0`) to the NAT Gateway/Instance
-
+- Routes in the route table of all the `from` addresses, pointing all outbound traffic (`0.0.0.0/0`) to the NAT Gateway
+or Instance.
 
 ## Configuration examples
 
 ### Single NAT Gateway in the public subnet
 
-The default VPC has two RouteTables according to the `Defaults.vpcClassB3Private3Public` function. A private route table
-and a public route table.
-
-In the configuration below, the NAT is placed in the `public-1` subnet and the `private` route table is configured to
-route all outbound traffic to the NAT.
+The default VPC includes two Route Tables, one private and one public, as defined by the `Defaults.vpcClassB3Private3Public`
+function. In the configuration below, the NAT is placed in the `public-1` subnet, and the `private` route table is set to
+route all outbound traffic through the NAT.
 
 ```ts
 const config: DataLandingZoneProps = {
@@ -189,11 +189,12 @@ const config: DataLandingZoneProps = {
 
 ### NAT Gateway per AZ
 
-The Default VPC function can not be used for this test as it creates a single public and private route table. Instead,
-we have to manually configure the VPC to have a route table per AZ, so that we can route the private subnet traffic to
-the NAT in the same public subnet AZ.
+Since the Default VPC function creates a single public and private route table we can not make use of it. This example
+configures the VPC with separate route tables for each Availability Zone (AZ). This ensures that the NAT in each public
+subnet AZ can route traffic from the private subnets within the same AZ.
 
-No traffic leaves the AZ, creating a Highly Available and Resilient architecture.
+This setup ensures no traffic leaves the AZ, creating a Highly Available and Resilient architecture.
+
 
 <DualCode>
   <Fragment slot="ts">
